[workspace]
exclude = [ "bin/utils/moonkey" ]
members = [
	"bin/utils/moonkey",
	"client/rpc/manual-xcm",
	"node",
	"node/cli",
	"node/service",
	"pallets/maintenance-mode",
	"pallets/migrations",
	"pallets/nop",
	"pallets/proxy-genesis-companion",
	"precompiles/utils/macro",
	"precompiles/pallet-nop",
	"runtime/moonbase",
	"runtime/moonbeam",
	"runtime/moonriver",
]

[profile.release]
panic = "unwind"
